--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 <html lang="en">
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/p5.js"></script>
@@ -12,4 +12,5 @@
     </main>
     <script src="sketch.js"></script>
   </body>
-</html>
+<html>
+
